--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.johndizaro.ctrl_geral">
+    package="com.johndizaro.ctrlgeral">
    <application
         android:label="ctrl_geral"
         android:icon="@mipmap/ic_launcher">
