--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  #  logger: ^1.0.0
-  logging: ^1.0.1
+  logger: ^1.0.0
+#  logging: ^1.0.1
   #
   bloc_pattern: ^3.0.0
 
