--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,18 +27,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
   logger: ^1.0.0
-#  logging: ^1.0.1
-  #
-  bloc_pattern: ^3.0.0
 
-  firebase_auth: ^1.1.2
-  cloud_firestore: ^1.0.7
-  firebase_core: ^1.1.0
+  flutter_bloc: ^7.0.0
+  firebase_auth: ^1.1.4
+  cloud_firestore: ^2.1.0
+  firebase_core: ^1.1.1
 
   email_validator: ^2.0.1
-  rxdart: ^0.26.0
+#  rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
