--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
-#  sdk: ">=2.12.0 <3.0.0"
+#  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,15 +28,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
-  logger: ^1.0.0
-
-  flutter_bloc: ^7.0.1
-  firebase_auth: ^1.4.1
-  cloud_firestore: ^2.2.2
-  firebase_core: ^1.3.0
-
-  email_validator: ^2.0.1
+#  logger: ^1.0.0
+#
+#  flutter_bloc: ^7.0.1
+#  firebase_auth: ^1.4.1
+#  cloud_firestore: ^2.2.2
+#  firebase_core: ^1.3.0
+#
+#  email_validator: ^2.0.1
 #  rxdart: ^0.26.0
+
+  firebase_auth: ^1.4.1
+  flutter_bloc: ^7.0.1
+  formz: ^0.4.0
+  equatable: ^2.0.3
+  authentication_repository:
+    path: packages/authentication_repository
+  user_repository:
+    path: packages/user_repository
 
 dev_dependencies:
   flutter_test:
